Added login state

--- a/HTML/aboutus.html
+++ b/HTML/aboutus.html
@@ -12,26 +12,30 @@
   <link rel="stylesheet" href="../css/aboutus.css">
 
 </head>
+
 <body>
   <nav class="navbar navbar-expand-xl bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" style="margin-right: 0;" href="../index.html" ><img src="../Fotos_pagina/Logo_NAOM.png" alt="" width="150px" ></a>
+      <a class="navbar-brand" style="margin-right: 0;" href="../index.html"><img src="../Fotos_pagina/Logo_NAOM.png"
+          alt="" width="150px"></a>
       <div class="row" id="user-wrapper">
         <div class="col-4">
-        <a class="iconNav" href="../HTML/carrito.html"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px" id="cartIcon"></a>
-      </div>
+          <a class="iconNav" href="../HTML/carrito.html"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px"
+              id="cartIcon"></a>
+        </div>
         <div class="dropdown col-4">
-              <a class="iconNav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon">
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="../HTML/logIn.html">Inicia Sesión</a></li>
-                <li><a class="dropdown-item" href="../HTML/registro.html">Registrate</a></li>
-              </ul>
-      </div>
+          <a class="iconNav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon">
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item toggleUserView" href="../HTML/logIn.html">Inicia Sesión</a></li>
+            <li><a class="dropdown-item toggleUserView" href="../HTML/registro.html">Registrate</a></li>
+          </ul>
+        </div>
         <!--<a class="iconNav" href="../html/registro.html"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>-->
       </div>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -54,7 +58,7 @@
           <li class="nav-item">
             <a class="nav-link" href="aboutus.html">Nosotros</a>
           </li>
-        </ul>    
+        </ul>
       </div>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
@@ -63,7 +67,7 @@
     </div>
   </nav>
 
-  
+
 
   <main class="container-fluid text-center">
     <header class="main-headers text-center">
@@ -78,8 +82,8 @@
           <h6>Developer Team</h6>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
-              <a href="https://github.com/lorerzd" target="_blank" class="card-link"><img src="../Fotos_pagina/GitHub.png"
-                  alt="" width="25px" height="25px"></a>
+              <a href="https://github.com/lorerzd" target="_blank" class="card-link"><img
+                  src="../Fotos_pagina/GitHub.png" alt="" width="25px" height="25px"></a>
             </li>
           </ul>
           <p class="card-text">Ingeniera industrial especializada en desarrollo de software, motivada y apasionada por
@@ -90,7 +94,7 @@
           </div>
         </div>
       </div>
-  
+
       <div class="card">
         <img src="../Fotos_nosotros/adrian.png" class="card-img-top" alt="..." width="286px">
         <div class="card-body">
@@ -98,8 +102,8 @@
           <h6>Developer Team</h6>
           <ul class="list-group list-group-flush">
             <li class="list-group-item" target="_blank">
-              <a href="https://github.com/arguelloar" target="_blank" class="card-link"><img src="../Fotos_pagina/GitHub.png"
-                  alt="" width="25px" height="25px"></a>
+              <a href="https://github.com/arguelloar" target="_blank" class="card-link"><img
+                  src="../Fotos_pagina/GitHub.png" alt="" width="25px" height="25px"></a>
             </li>
           </ul>
           <p class="card-text">Java Developer. Me apasiona la tecnología, me gusta resolver problemas y ser eficiente.
@@ -111,7 +115,7 @@
           </div>
         </div>
       </div>
-  
+
       <div class="card">
         <img src="../Fotos_nosotros/ivan.png" class="card-img-top" alt="..." width="286px">
         <div class="card-body">
@@ -123,15 +127,16 @@
                   src="../Fotos_pagina/GitHub.png" alt="" width="25px" height="25px"></a>
             </li>
           </ul>
-          <p class="card-text">Ingeniero Geofísico con un gran gusto en el desarrollo Web Full Stack. Con muchas ganas de
+          <p class="card-text">Ingeniero Geofísico con un gran gusto en el desarrollo Web Full Stack. Con muchas ganas
+            de
             seguir creciendo personal y profesionalmente.</p>
           <div class="card-button" target="_blank">
-            <a href="https://drive.google.com/file/d/1sJzwMDlARpVo0Ztj9aNK2QkZRO4u9x9G/view?usp=sharing"
-              target="_blank" class="btn btn-dark" role="button">Descargar CV</a>
+            <a href="https://drive.google.com/file/d/1sJzwMDlARpVo0Ztj9aNK2QkZRO4u9x9G/view?usp=sharing" target="_blank"
+              class="btn btn-dark" role="button">Descargar CV</a>
           </div>
         </div>
       </div>
-      
+
       <div class="card">
         <img src="../Fotos_nosotros/johanna.png" class="card-img-top" alt="..." width="286px">
         <div class="card-body">
@@ -144,15 +149,16 @@
             </li>
           </ul>
           <p class="card-text">Diseñadora gráfica, proactiva, apasionada del diseño, la mercadotecnia, fotografía, la
-            tecnología y con un gusto adquirido por la programación. Me preparé como Desarrolladora Full Stack y Diseñadora UX.
+            tecnología y con un gusto adquirido por la programación. Me preparé como Desarrolladora Full Stack y
+            Diseñadora UX.
           </p>
           <div class="card-button" target="_blank">
-            <a href="https://drive.google.com/file/d/15BiD-Wskvo9B9BbYp00EafH_tlntFPHU/view?usp=sharing"
-              target="_blank" class="btn btn-dark" role="button">Descargar CV</a>
+            <a href="https://drive.google.com/file/d/15BiD-Wskvo9B9BbYp00EafH_tlntFPHU/view?usp=sharing" target="_blank"
+              class="btn btn-dark" role="button">Descargar CV</a>
           </div>
         </div>
       </div>
-  
+
       <div class="card">
         <img src="../Fotos_nosotros/josue.png" class="card-img-top" alt="..." width="286px">
         <div class="card-body">
@@ -160,8 +166,8 @@
           <h6>SCRUM Master</h6>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
-              <a href="https://github.com/JosueTo" target="_blank" class="card-link"><img src="../Fotos_pagina/GitHub.png"
-                  alt="" width="25px" height="25px"></a>
+              <a href="https://github.com/JosueTo" target="_blank" class="card-link"><img
+                  src="../Fotos_pagina/GitHub.png" alt="" width="25px" height="25px"></a>
             </li>
           </ul>
           <p class="card-text">Me formé profesionalmente como Ingeniero Industrial y me convertí en desarrollador Full
@@ -169,13 +175,13 @@
             por pasión. Comprometido, perseverante, franco y con gusto por trabajar en equipo.
           </p>
           <div class="card-button" target="_blank">
-            <a href="https://drive.google.com/file/d/1WKl24Kqlss4qinakrlYsQETISmFnpnbx/view?usp=sharing"
-              target="_blank" class="btn btn-dark" role="button">Descargar CV</a>
-  
+            <a href="https://drive.google.com/file/d/1WKl24Kqlss4qinakrlYsQETISmFnpnbx/view?usp=sharing" target="_blank"
+              class="btn btn-dark" role="button">Descargar CV</a>
+
           </div>
         </div>
       </div>
-  
+
       <div class="card">
         <img src="../Fotos_nosotros/maria.png" class="card-img-top" alt="..." width="286px">
         <div class="card-body">
@@ -187,16 +193,17 @@
                   src="../Fotos_pagina/GitHub.png" alt="" width="25px" height="25px"></a>
             </li>
           </ul>
-          <p class="card-text">Ingeniera Bioquímica y Técnica Analista programadora, interesada en el área de TI. Realicé
+          <p class="card-text">Ingeniera Bioquímica y Técnica Analista programadora, interesada en el área de TI.
+            Realicé
             cursos y certificaciones para enfocarme al área de desarrollo web Full Stack.</p>
           <div class="card-button" target="_blank">
-            <a href="https://drive.google.com/file/d/1dp98E0uSjDuelFvVqFexyoSpnyZ-AhHQ/view"
-              target="_blank" class="btn btn-dark" role="button">Descargar CV</a>
-  
+            <a href="https://drive.google.com/file/d/1dp98E0uSjDuelFvVqFexyoSpnyZ-AhHQ/view" target="_blank"
+              class="btn btn-dark" role="button">Descargar CV</a>
+
           </div>
         </div>
       </div>
-  
+
       <div class="card">
         <img src="../Fotos_nosotros/memo.png" class="card-img-top" alt="..." width="286px">
         <div class="card-body">
@@ -208,20 +215,23 @@
                   src="../Fotos_pagina/GitHub.png" alt="" width="25px" height="25px"></a>
             </li>
           </ul>
-          <p class="card-text">Egresado en electrónica encontré una pasión en el código lo que motivó a cambiar mi enfoque
+          <p class="card-text">Egresado en electrónica encontré una pasión en el código lo que motivó a cambiar mi
+            enfoque
             y
             actual desempeño como desarrollador web buscando siempre innovar y crecer profesionalmente.</p>
           <div class="card-button" target="_blank">
-            <a href="https://drive.google.com/file/d/1Tzr6Ud1U1w_WYEtQ9t0HVJZo86zNyhgR/view"
-              target="_blank" class="btn btn-dark" role="button">Descargar CV</a>
+            <a href="https://drive.google.com/file/d/1Tzr6Ud1U1w_WYEtQ9t0HVJZo86zNyhgR/view" target="_blank"
+              class="btn btn-dark" role="button">Descargar CV</a>
           </div>
         </div>
       </div>
       <div id="descripcion">
         <h5>Nuestro proyecto</h5>
-        <p>Este proyecto consta de una página de e-commerce adecuada para una tienda en línea de maquillaje existente que
+        <p>Este proyecto consta de una página de e-commerce adecuada para una tienda en línea de maquillaje existente
+          que
           se dedicaba a vender mediante Instagram.</p>
-        <p>Desarrollamos la página mediante tecnologías como HTML, CSS, JavaScript, Bootstrap, Java y bases de datos, para
+        <p>Desarrollamos la página mediante tecnologías como HTML, CSS, JavaScript, Bootstrap, Java y bases de datos,
+          para
           dicho proyecto todos los integrantes se involucraron en todas las partes del desarrollo.</p>
       </div>
     </div>
@@ -233,23 +243,19 @@
       <!-- Section: Social media -->
       <section class="mb-4">
         <span>Síguenos en redes</span>
-            <!-- Whatsapp -->
-            <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" target="_blank" title="Mándame un mensaje" role="button" data-mdb-ripple-color="dark"
-              style="padding: 0;"><img src="../Fotos_pagina/Whats.png" width="40px" style="color: white;" alt=""></i></a>
-            <!-- Instagram -->
-            <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.instagram.com/natalia_omakeup/" target="_blank" title="Sígueme en Instagram" role="button" data-mdb-ripple-color="dark"
-              style="padding: 0;"><img src="../Fotos_pagina/IG.png" alt="" width="40px" height="40px"></i></a>
-            <br>
+        <!-- Whatsapp -->
+        <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" target="_blank" title="Mándame un mensaje"
+          role="button" data-mdb-ripple-color="dark" style="padding: 0;"><img src="../Fotos_pagina/Whats.png"
+            width="40px" style="color: white;" alt=""></i></a>
+        <!-- Instagram -->
+        <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.instagram.com/natalia_omakeup/"
+          target="_blank" title="Sígueme en Instagram" role="button" data-mdb-ripple-color="dark"
+          style="padding: 0;"><img src="../Fotos_pagina/IG.png" alt="" width="40px" height="40px"></i></a>
+        <br>
         <br>
         <span>Métodos de pago</span>
-        <a
-          class="btn btn-link btn-floating btn-lg text-dark m-1"
-          href="#!"
-          role="button"
-          data-mdb-ripple-color="dark"
-          style="padding: 0;"
-          ><img src="../Fotos_pagina/tarjetas1.png" alt="" width="200px"></i
-        ></a>
+        <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button" data-mdb-ripple-color="dark"
+          style="padding: 0;"><img src="../Fotos_pagina/tarjetas1.png" alt="" width="200px"></i></a>
       </section>
     </div>
     <div class="text-center text-dark pb-2" style="background-color: rgba(0, 0, 0, 0.2);">
@@ -261,4 +267,5 @@
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
 </body>
+
 </html>
