--- a/HTML/formProductos.html
+++ b/HTML/formProductos.html
@@ -13,26 +13,30 @@
   <link rel="stylesheet" href="../css/aboutus.css">
 
 </head>
+
 <body>
   <nav class="navbar navbar-expand-xl bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" style="margin-right: 0;" href="../index.html" ><img src="../Fotos_pagina/Logo_NAOM.png" alt="" width="150px" ></a>
+      <a class="navbar-brand" style="margin-right: 0;" href="../index.html"><img src="../Fotos_pagina/Logo_NAOM.png"
+          alt="" width="150px"></a>
       <div class="row" id="user-wrapper">
         <div class="col-4">
-        <a class="iconNav" href="../HTML/carrito.html"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px" id="cartIcon"></a>
-      </div>
+          <a class="iconNav" href="../HTML/carrito.html"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px"
+              id="cartIcon"></a>
+        </div>
         <div class="dropdown col-4">
-              <a class="iconNav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon">
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="../HTML/logIn.html">Inicia Sesión</a></li>
-                <li><a class="dropdown-item" href="../HTML/registro.html">Registrate</a></li>
-              </ul>
-      </div>
+          <a class="iconNav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon">
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item toggleUserView" href="../HTML/logIn.html">Inicia Sesión</a></li>
+            <li><a class="dropdown-item toggleUserView" href="../HTML/registro.html">Registrate</a></li>
+          </ul>
+        </div>
         <!--<a class="iconNav" href="../html/registro.html"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>-->
       </div>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -55,7 +59,7 @@
           <li class="nav-item">
             <a class="nav-link" href="aboutus.html">Nosotros</a>
           </li>
-        </ul>    
+        </ul>
       </div>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
@@ -64,7 +68,7 @@
     </div>
   </nav>
 
-    
+
   <div class="mx-2 my-4" id="formulario">
     <!-- Titulo formulario -->
     <h1 class="my-5 text-center">Agregar productos</h1>
@@ -72,75 +76,74 @@
     <div class="alert alert-success" role="alert" style="display: none;" id="alertSuccess">
     </div>
     <form class="row justify-content-around" action="" id="form">
-        <div class="col-lg-7 form-outline text-center">
-            <label class="form-label" for="form0"></label>
-            <img id="prevImg" width="200px" src="../Fotos_pagina/photo-camera.png" />
-            <p class="mt-1">La imagen debe de tener una altura y ancho iguales. Ej. 160x160</p>
-            <input type="file" name="file" id="form0" onchange="encodeImageFileAsURL(this)" class="form-control mt-2" />
-            <div class="alertRegistro" id="alertFile" style="display: none;">Debe de contener una foto</div>
-        </div>
-        <div class="col-lg-7 form-outline">
-            <label class="form-label" for="form1">Nombre del producto</label>
-            <input type="text" name="name" id="form1" class="form-control" />
-            <div class="alertRegistro" id="alertProductName" style="display: none;">El nombre debe contener entre 3-20 caracteres</div>
-        </div>
-        <div class="col-lg-7 form-outline">
-            <label class="form-label" for="form2">Precio</label>
-            <input type="number" step="0.01" name="price" id="form2" class="form-control" />
-            <div class="alertRegistro" id="alertPrice" style="display: none;">Ingresa un precio válido</div>
-        </div>
-        <div class="form-outline col-lg-7">
-            <label class="form-label" for="form3">Descripción</label>
-            <input type="text" name="description" id="form3" class="form-control" />
-            <div class="alertRegistro" id="alertDescription" style="display: none;">La descripción debe contener más de 15 caracteres</div>
-        </div>
-        <div class="form-outline col-lg-7">
-            <label class="form-label" for="form4">Productos disponibles</label>
-            <input type="number" step="0.01" name="stock" id="form4" class="form-control" />
-            <div class="alertRegistro" id="alertAvailable" style="display: none;">Ingresa productos disponibles</div>
-        </div>
-        <div class="form-outline mb-4 col-lg-7" id="buttons">
-            <button type="submit" class="mx-2" id="btnProduct">Agregar producto</button>
-            <button type="button" class="mx-2" id="btnProductCancel">Cancelar</button>
-        </div>
+      <div class="col-lg-7 form-outline text-center">
+        <label class="form-label" for="form0"></label>
+        <img id="prevImg" width="200px" src="../Fotos_pagina/photo-camera.png" />
+        <p class="mt-1">La imagen debe de tener una altura y ancho iguales. Ej. 160x160</p>
+        <input type="file" name="file" id="form0" onchange="encodeImageFileAsURL(this)" class="form-control mt-2" />
+        <div class="alertRegistro" id="alertFile" style="display: none;">Debe de contener una foto</div>
+      </div>
+      <div class="col-lg-7 form-outline">
+        <label class="form-label" for="form1">Nombre del producto</label>
+        <input type="text" name="name" id="form1" class="form-control" />
+        <div class="alertRegistro" id="alertProductName" style="display: none;">El nombre debe contener entre 3-20
+          caracteres</div>
+      </div>
+      <div class="col-lg-7 form-outline">
+        <label class="form-label" for="form2">Precio</label>
+        <input type="number" step="0.01" name="price" id="form2" class="form-control" />
+        <div class="alertRegistro" id="alertPrice" style="display: none;">Ingresa un precio válido</div>
+      </div>
+      <div class="form-outline col-lg-7">
+        <label class="form-label" for="form3">Descripción</label>
+        <input type="text" name="description" id="form3" class="form-control" />
+        <div class="alertRegistro" id="alertDescription" style="display: none;">La descripción debe contener más de 15
+          caracteres</div>
+      </div>
+      <div class="form-outline col-lg-7">
+        <label class="form-label" for="form4">Productos disponibles</label>
+        <input type="number" step="0.01" name="stock" id="form4" class="form-control" />
+        <div class="alertRegistro" id="alertAvailable" style="display: none;">Ingresa productos disponibles</div>
+      </div>
+      <div class="form-outline mb-4 col-lg-7" id="buttons">
+        <button type="submit" class="mx-2" id="btnProduct">Agregar producto</button>
+        <button type="button" class="mx-2" id="btnProductCancel">Cancelar</button>
+      </div>
     </form>
   </div>
 
-<footer class="text-center text-white" style="background-color:black;">
+  <footer class="text-center text-white" style="background-color:black;">
     <!-- Grid container -->
-  <div class="container">
-        <!-- Section: Social media -->
-    <section class="mb-4">
-      <span>Síguenos en redes</span>
-      <!-- Whatsapp -->
-      <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" target="_blank" title="Mándame un mensaje" role="button" data-mdb-ripple-color="dark"
-        style="padding: 0;"><img src="../Fotos_pagina/Whats.png" width="40px" style="color: white;" alt=""></i></a>
+    <div class="container">
+      <!-- Section: Social media -->
+      <section class="mb-4">
+        <span>Síguenos en redes</span>
+        <!-- Whatsapp -->
+        <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" target="_blank" title="Mándame un mensaje"
+          role="button" data-mdb-ripple-color="dark" style="padding: 0;"><img src="../Fotos_pagina/Whats.png"
+            width="40px" style="color: white;" alt=""></i></a>
 
-      <!-- Instagram -->
-      <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.instagram.com/natalia_omakeup/" target="_blank" title="Sígueme en Instagram" role="button" data-mdb-ripple-color="dark"
-        style="padding: 0;"><img src="../Fotos_pagina/IG.png" alt="" width="40px" height="40px"></i></a>
-      <br>
-      <br>
-      <span>Métodos de pago</span>
-      <a
-        class="btn btn-link btn-floating btn-lg text-dark m-1"
-        href="#!"
-        role="button"
-        data-mdb-ripple-color="dark"
-        style="padding: 0;"
-        ><img src="../Fotos_pagina/tarjetas1.png" alt="" width="200px"></i
-      ></a>
-  
-    </section>
-  </div>
-  <div class="text-center text-dark pb-2" style="background-color: rgba(0, 0, 0, 0.2);">
-    Copyright NAOM (WebOs) - 2023. Todos los derechos reservados.
-  </div>
-</footer>
+        <!-- Instagram -->
+        <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.instagram.com/natalia_omakeup/"
+          target="_blank" title="Sígueme en Instagram" role="button" data-mdb-ripple-color="dark"
+          style="padding: 0;"><img src="../Fotos_pagina/IG.png" alt="" width="40px" height="40px"></i></a>
+        <br>
+        <br>
+        <span>Métodos de pago</span>
+        <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button" data-mdb-ripple-color="dark"
+          style="padding: 0;"><img src="../Fotos_pagina/tarjetas1.png" alt="" width="200px"></i></a>
+
+      </section>
+    </div>
+    <div class="text-center text-dark pb-2" style="background-color: rgba(0, 0, 0, 0.2);">
+      Copyright NAOM (WebOs) - 2023. Todos los derechos reservados.
+    </div>
+  </footer>
   <script src="../js/navbar.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
-    <script src="../js/formProducts.js"></script>
+  <script src="../js/formProducts.js"></script>
 </body>
+
 </html>
