--- a/HTML/logIn.html
+++ b/HTML/logIn.html
@@ -28,8 +28,8 @@
             <img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon">
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="../HTML/logIn.html">Inicia Sesión</a></li>
-            <li><a class="dropdown-item" href="../HTML/registro.html">Registrate</a></li>
+            <li><a class="dropdown-item toggleUserView" href="../HTML/logIn.html">Inicia Sesión</a></li>
+            <li><a class="dropdown-item toggleUserView" href="../HTML/registro.html">Registrate</a></li>
           </ul>
         </div>
         <!--<a class="iconNav" href="../html/registro.html"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>-->
@@ -84,7 +84,7 @@
         </div>
         <!--<p class="mt-4">¿Olvidaste tu contraseña?</p>-->
       </div>
-      
+
       <div class="row justify-content-around">
         <div class="col-lg-4 col-6 text-center my-5">
           <button type="button" class="btnLogIn" id="btnLogIn">Inicia sesión</button>
