--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     <img src="./Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon">
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="./HTML/logIn.html">Inicia Sesión</a></li>
-                    <li><a class="dropdown-item" href="./HTML/registro.html">Registrate</a></li>
+                    <li><a class="dropdown-item toggleUserView" href="../HTML/logIn.html">Inicia Sesión</a></li>
+                    <li><a class="dropdown-item toggleUserView" href="../HTML/registro.html">Registrate</a></li>
                   </ul>
           </div>
             <!--<a class="iconNav" href="../html/registro.html"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>-->
