Se agregó una alerta de inicio de sesión

--- a/HTML/registro.html
+++ b/HTML/registro.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <html lang="en">
 
 <head>
@@ -113,9 +113,22 @@
       <div class="mb-5"></div>
       </div>
     </form>
-
-
   </main>
+
+  <!---------------MODAL--------->
+  <div class="modal" id="ModalRegistro" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title"></h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <strong><p>INICIO DE SESIÓN EXITOSO</p></strong>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <footer class="text-center text-white" style="background-color:black;">
     <!-- Grid container -->
