--- a/HTML/formProductos.html
+++ b/HTML/formProductos.html
@@ -116,16 +116,16 @@
  <div class="modal" id="exampleModal"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
+      <div class="modal-header justify-content-around">
         <h5 class="modal-title">Productos</h5>
         <button type="button" id="CloseModal" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body text-center">
         <p>¿Desea agregar este producto?</p>
       </div>
       <div class="modal-footer">
-        <button type="button" id="btnCerrar" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-        <button type="button" id="btnConfirm" class="btn btn-primary">Agregar</button>
+        <button type="button" id="btnCerrar" data-bs-dismiss="modal">Cerrar</button>
+        <button type="button" id="btnConfirm">Agregar</button>
       </div>
     </div>
   </div>
