--- a/HTML/logIn.html
+++ b/HTML/logIn.html
@@ -101,7 +101,19 @@
 
   </main>
 
-
+  <!---------------MODAL--------->
+  <div class="modal" id="ModalRegistro" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header justify-content-around">
+          <h5 class="modal-title"><strong>Inicio de sesión exitoso</strong></h5>
+        </div>
+        <div class="modal-body text-center">
+          <p>Redirigiendo...</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
