--- a/HTML/registro.html
+++ b/HTML/registro.html
@@ -119,12 +119,11 @@
   <div class="modal" id="ModalRegistro" tabindex="-1">
     <div class="modal-dialog">
       <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title"></h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <div class="modal-header justify-content-around">
+          <h5 class="modal-title">Registro de usuario exitoso</h5>
         </div>
-        <div class="modal-body">
-          <strong><p>INICIO DE SESIÓN EXITOSO</p></strong>
+        <div class="modal-body text-center">
+          <p>Redirigiendo...</p>
         </div>
       </div>
     </div>
