se agregó el link en la página de registro hacia inicio de sesion

--- a/HTML/registro.html
+++ b/HTML/registro.html
@@ -108,6 +108,8 @@
       <div class="row justify-content-around">
         <div class="col-lg-4 col-10 text-center my-5">
           <button type="button" class="btnRegistro" id="btnRegistro">¡Regístrate ahora!</button>
+          <p class="mt-4" style="font-family: ExoSemiBold;">¿Ya tienes una cuenta? <a
+            href="./logIn.html">¡Inicia sesión!</a></p>
         </div>
       </div>
       <div class="mb-5"></div>
