Se agrega spinner a modal de login y registro

--- a/HTML/registro.html
+++ b/HTML/registro.html
@@ -125,6 +125,9 @@
           <h5 class="modal-title">Registro de usuario exitoso</h5>
         </div>
         <div class="modal-body text-center">
+          <div class="spinner-border" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
           <p>Redirigiendo...</p>
         </div>
       </div>
