--- a/HTML/logIn.html
+++ b/HTML/logIn.html
@@ -109,6 +109,9 @@
           <h5 class="modal-title"><strong>Inicio de sesión exitoso</strong></h5>
         </div>
         <div class="modal-body text-center">
+          <div class="spinner-border" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
           <p>Redirigiendo...</p>
         </div>
       </div>
