Se cambia imagen de banner

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="../css/index.css">
 </head>
 
+
 <body>
   <nav class="navbar navbar-expand-xl bg-light">
     <div class="container-fluid">
@@ -92,11 +93,12 @@
         </div>
       </div>
       <div class="carousel-item c-item">
-        <img src="./Fotos_pagina/banner-maquillaje.jpg" class="d-block w-100 c-img" alt="slide3">
+        <img src="./Fotos_pagina/skin-makeup.jpg" class="d-block w-100 c-img" alt="slide3">
         <div class="carousel-caption">
           <h1>Encuentra todo lo que necesites para lucir perfecta</h1>
           <p>Tu mejor opción</p>
         </div>
+        <div class="credits">Imagen de <a href="https://www.freepik.es/foto-gratis/surtido-contenedores-base-vista-superior_29068614.htm#from_view=detail_serie">Freepik</a></div>
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#hero-carousel" data-bs-slide="prev">
