cambios en css, html y json

--- a/HTML/aboutus.html
+++ b/HTML/aboutus.html
@@ -110,7 +110,7 @@
             Soy muy flexible a la hora de aprender nuevas tecnologias.
           </p>
           <div class="card-button" target="_blank">
-            <a href="https://www.figma.com/file/pv9lja8yzYyeAnR8PsQG17/Maqueta-NAOM.?node-id=156%3A1838&t=aBtpH132KLEiomI1-0"
+            <a href="https://drive.google.com/file/d/1v7IZvwdFZr1iCiTgQ8Kr2lOcuXh7W9S5/view"
               target="_blank" class="btn btn-dark" role="button">Descargar CV</a>
           </div>
         </div>
