--- a/index.html
+++ b/index.html
@@ -81,22 +81,22 @@
       <div class="carousel-item active c-item">
         <img src="/Fotos_pagina/pink-makeup-1611776547 (1).png" class="d-block w-100 c-img" alt="Slide1">
         <div class="carousel-caption">
-          <h1>Espera nuestras ofertas!</h1>
-          <p>Te sorprenderás!</p>
+          <h1>¡Espera nuestras ofertas!</h1>
+          <p>¡Te sorprenderás!</p>
         </div>
       </div>
       <div class="carousel-item c-item">
         <img src="./Fotos_pagina/banner-maquillaje-mujer.jpg" class="d-block w-100 c-img" alt="slide2">
         <div class="carousel-caption">
           <h1>Somos la mejor tienda de maquillaje en México</h1>
-          <p>Llegamos para quedarnos!</p>
+          <p>¡Llegamos para quedarnos!</p>
         </div>
       </div>
       <div class="carousel-item c-item">
         <img src="./Fotos_pagina/skin-makeup.jpg" class="d-block w-100 c-img" alt="slide3">
         <div class="carousel-caption">
           <h1>Encuentra todo lo que necesites para lucir perfecta</h1>
-          <p>Tu mejor opción</p>
+          <p>¡Tu mejor opción!</p>
         </div>
         <div class="credits">Imagen de <a href="https://www.freepik.es/foto-gratis/surtido-contenedores-base-vista-superior_29068614.htm#from_view=detail_serie">Freepik</a></div>
       </div>
