Se agrego la busqueda

--- a/HTML/formProductos.html
+++ b/HTML/formProductos.html
@@ -62,8 +62,8 @@
         </ul>
       </div>
       <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-        <button class="btn btn-outline-dark" type="submit">Buscar</button>
+        <input class="form-control me-2" type="search" id="searchBar" placeholder="Buscar" aria-label="Search">
+        <button class="btn btn-outline-dark" id="searchBar" type="submit">Buscar</button>
       </form>
     </div>
   </nav>
