--- a/HTML/maquillaje.html
+++ b/HTML/maquillaje.html
@@ -17,7 +17,7 @@
 <body>
   <nav class="navbar navbar-expand-xl bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" style="margin-right: 0;" href="../index.html"><img src="../Fotos_pagina/Logo_NAOM.png"
+      <a class="navbar-brand" style="margin-right: 0;" href="/"><img src="../Fotos_pagina/Logo_NAOM.png"
           alt="" width="150px"></a>
       <div class="row" id="user-wrapper">
         <div class="col-4">
@@ -62,8 +62,8 @@
         </ul>
       </div>
       <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-        <button class="btn btn-outline-dark" type="submit">Buscar</button>
+        <input class="form-control me-2" type="search" id="searchBar" placeholder="Buscar" aria-label="Search">
+        <button class="btn btn-outline-dark" id="searchButton" type="submit">Buscar</button>
       </form>
     </div>
   </nav>
