--- a/HTML/carrito.html
+++ b/HTML/carrito.html
@@ -16,11 +16,23 @@
 <body>
   <nav class="navbar navbar-expand-xl bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" style="margin-right: 0;" href="../index.html"><img src="../Fotos_pagina/Logo_NAOM.png"
+      <a class="navbar-brand" style="margin-right: 0;" href="/"><img src="../Fotos_pagina/Logo_NAOM.png"
           alt="" width="150px"></a>
-      <div id="user-wrapper">
-        <li><a class="dropdown-item toggleUserView" href="../HTML/logIn.html">Inicia Sesión</a></li>
-        <li><a class="dropdown-item toggleUserView" href="../HTML/registro.html">Registrate</a></li>
+      <div class="row" id="user-wrapper">
+        <div class="col-4">
+          <a class="iconNav" href="../HTML/carrito.html"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px"
+              id="cartIcon"></a>
+        </div>
+        <div class="dropdown col-4">
+          <a class="iconNav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon">
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item toggleUserView" href="../HTML/logIn.html">Inicia Sesión</a></li>
+            <li><a class="dropdown-item toggleUserView" href="../HTML/registro.html">Registrate</a></li>
+          </ul>
+        </div>
+        <!--<a class="iconNav" href="../html/registro.html"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>-->
       </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,13 +41,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="./Maquillaje.html">Maquillaje</a>
+            <a class="nav-link" href="./maquillaje.html">Maquillaje</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./cuidadofacial.html">Cuidado facial</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./Brochas.html">Brochas</a>
+            <a class="nav-link" href="./brochas.html">Brochas</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./accesorios.html">Accesorios</a>
@@ -49,8 +61,8 @@
         </ul>
       </div>
       <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-        <button class="btn btn-outline-dark" type="submit">Buscar</button>
+        <input class="form-control me-2" type="search" id="searchBar" placeholder="Buscar" aria-label="Search">
+        <button class="btn btn-outline-dark" id="searchButton" type="submit">Buscar</button>
       </form>
     </div>
   </nav>
