Se ajusto la pagina de contacto y valores default del filtro

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -89,7 +89,7 @@
 
       <!-- FORMULARIO DE CONTACTO -->
 
-      <div id="formContact" class="col-lg-5 col-sm-12">
+      <div id="formContact" class="col-lg-5 col-sm-12 mt-3">
         <div class="alert alert-success mt-2" id="alertSuccess" style="display: none;" role="alert">
           Su mensaje se ha enviado correctamente.
         </div>
