--- a/HTML/maquillaje.html
+++ b/HTML/maquillaje.html
@@ -73,8 +73,8 @@
       <p class="text-center mt-5"><a role="button"><strong>Maquillaje</strong></a></p>
       <p id="precio" class="text-center"><strong>Precio</strong></p>
       <div id="leftBoxBottom">
-        <input type="text" class="me-2" id="minVal" min="0" value="0" placeholder="min.">
-        <input type="text" class="ms-2" id="maxVal" max="1500" value="1500" placeholder="máx.">
+        <input type="text" class="me-2" id="minVal" min="0" placeholder="min.">
+        <input type="text" class="ms-2" id="maxVal" max="1500" placeholder="máx.">
       </div>
     </div>
     <div id="card-wrapper" class="row mt-5 ms-4">
