Se centra carrusel de productos

--- a/HTML/aboutus.html
+++ b/HTML/aboutus.html
@@ -56,7 +56,7 @@
             <a class="nav-link" href="contact.html">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="aboutus.html">Nosotros</a>
+            <a class="nav-link" href="aboutus.html"><span id="current-page">Nosotros</span></a>
           </li>
         </ul>
       </div>
