--- a/HTML/brochas.html
+++ b/HTML/brochas.html
@@ -47,7 +47,7 @@
             <a class="nav-link" href="./cuidadofacial.html">Cuidado facial</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./brochas.html">Brochas</a>
+            <a class="nav-link" href="./brochas.html"><span id="current-page">Brochas</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./accesorios.html">Accesorios</a>
