--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -53,7 +53,7 @@
             <a class="nav-link" href="./accesorios.html">Accesorios</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contacto</a>
+            <a class="nav-link" href="contact.html"><span id="current-page">Contacto</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="aboutus.html">Nosotros</a>
