--- a/HTML/cuidadofacial.html
+++ b/HTML/cuidadofacial.html
@@ -44,7 +44,7 @@
             <a class="nav-link" href="./maquillaje.html">Maquillaje</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./cuidadofacial.html">Cuidado facial</a>
+            <a class="nav-link" href="./cuidadofacial.html"><span id="current-page">Cuidado facial</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./brochas.html">Brochas</a>
