--- a/HTML/maquillaje.html
+++ b/HTML/maquillaje.html
@@ -30,7 +30,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item toggleUserView" href="../HTML/logIn.html">Inicia Sesión</a></li>
-            <li><a class="dropdown-item toggleUserView" href="../HTML/registro.html">Registrate</a></li>
+            <li><a class="dropdown-item toggleUserView" href="../HTML/registro.html">Regístrate</a></li>
           </ul>
         </div>
         <!--<a class="iconNav" href="../html/registro.html"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>-->
@@ -42,7 +42,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="./maquillaje.html">Maquillaje</a>
+            <a class="nav-link"  href="./maquillaje.html"><span id="current-page">Maquillaje</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./cuidadofacial.html">Cuidado facial</a>
