--- a/index.html
+++ b/index.html
@@ -111,18 +111,18 @@
     </button>
   </div>
   <!-- Productos -->
-    <div class="products-carousel row">
-      <h1 class="text-center">NOVEDADES</h1>
-      <div class="products-container">
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper mySwiper">
-          <div class="swiper-wrapper" id="list-items">
-            
-          </div>
+  <div class="products-carousel">
+    <h1 class="text-center">NOVEDADES</h1>
+    <div class="products-container">
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper" id="list-items">
+          
         </div>
       </div>
     </div>
+  </div>
   
   
     <!-- </div>
