--- a/HTML/accesorios.html
+++ b/HTML/accesorios.html
@@ -9,6 +9,7 @@
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../css/navbar.css">
+  <link rel="stylesheet" href="../css/aboutus.css">
 </head>
 
 <body>
@@ -48,7 +49,7 @@
             <a class="nav-link" href="./brochas.html">Brochas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./accesorios.html">Accesorios</a>
+            <a class="nav-link" href="./accesorios.html"><span id="current-page">Accesorios</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contacto</a>
