Se agregaro el HTML de productos a las respectivas paginas e inicio de sesion

--- a/HTML/brochas.html
+++ b/HTML/brochas.html
@@ -9,7 +9,8 @@
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../css/navbar.css">
-  <link rel="stylesheet" href="../css/aboutus.css">
+  <link rel="stylesheet" href="../css/maquillaje.css">
+  <script src="https://kit.fontawesome.com/1f6a29c5b3.js" defer crossorigin="anonymous"></script>
 
 </head>
 
@@ -29,7 +30,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item toggleUserView" href="../HTML/logIn.html">Inicia Sesión</a></li>
-            <li><a class="dropdown-item toggleUserView" href="../HTML/registro.html">Registrate</a></li>
+            <li><a class="dropdown-item toggleUserView" href="../HTML/registro.html">Regístrate</a></li>
           </ul>
         </div>
         <!--<a class="iconNav" href="../html/registro.html"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>-->
@@ -41,7 +42,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="./maquillaje.html">Maquillaje</a>
+            <a class="nav-link"  href="./maquillaje.html">Maquillaje</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./cuidadofacial.html">Cuidado facial</a>
@@ -67,8 +68,18 @@
     </div>
   </nav>
 
-
-  <h1>Brochas</h1>
+  <main class="container-fluid" id="mainContainer">
+    <div class="float-lg-start d-xl-block" id="leftBox">
+      <p class="text-center mt-5"><a role="button"><strong>Brochas</strong></a></p>
+      <p id="precio" class="text-center"><strong>Precio</strong></p>
+      <div id="leftBoxBottom">
+        <input type="text" class="me-2" id="minVal" min="0" placeholder="min.">
+        <input type="text" class="ms-2" id="maxVal" max="1500" placeholder="máx.">
+      </div>
+    </div>
+    <div id="card-wrapper" class="row mt-5 ms-4">
+    </div>
+  </main>
 
   <footer class="text-center text-white" style="background-color:black;">
     <!-- Grid container -->
@@ -90,6 +101,7 @@
         <span>Métodos de pago</span>
         <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button" data-mdb-ripple-color="dark"
           style="padding: 0;"><img src="../Fotos_pagina/tarjetas1.png" alt="" width="200px"></i></a>
+
       </section>
     </div>
     <div class="text-center text-dark pb-2" style="background-color: rgba(0, 0, 0, 0.2);">
@@ -100,6 +112,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
+  <script type="module" src="../js/maquillaje.js"></script>
 </body>
 
 </html>
