Boton de filtro y formproductos lista

--- a/HTML/maquillaje.html
+++ b/HTML/maquillaje.html
@@ -75,6 +75,7 @@
       <div id="leftBoxBottom">
         <input type="text" class="me-2" id="minVal" min="0" placeholder="min.">
         <input type="text" class="ms-2" id="maxVal" max="1500" placeholder="máx.">
+        <button class="ms-2" id="filtrarBtn">>></button>
       </div>
     </div>
     <div id="card-wrapper" class="row mt-5 ms-4">
