--- a/HTML/formProductos.html
+++ b/HTML/formProductos.html
@@ -80,7 +80,7 @@
         <label class="form-label" for="form0"></label>
         <img id="prevImg" width="200px" src="../Fotos_pagina/photo-camera.png" />
         <p class="mt-1">La imagen debe de tener una altura y ancho iguales. Ej. 160x160</p>
-        <input type="file" name="file" id="form0" onchange="encodeImageFileAsURL(this)" class="form-control mt-2" />
+        <input type="file" name="file" id="form0" class="form-control mt-2" />
         <div class="alertRegistro" id="alertFile" style="display: none;">Debe de contener una foto</div>
       </div>
       <div class="col-lg-7 form-outline">
@@ -131,6 +131,22 @@
   </div>
 </div>
 
+<div class="row justify-content-around">
+  <h2 class="text-center my-5">Lista de productos</h2>
+  <table id="tablaProductos" class="table table-borderless table-striped" style="width: 60rem; align-items: center;">
+    <thead>
+      <tr> 
+        <th scope="col">Nombre</th>
+        <th scope="col">Precio</th>
+        <th scope="col">Descripcion</th>
+        <th scope="col">Stock</th>
+      </tr>
+    </thead>
+    <tbody id="tableRow">
+    </tbody>
+  </table>
+</div>
+
   <footer class="text-center text-white" style="background-color:black;">
     <!-- Grid container -->
     <div class="container">
@@ -162,7 +178,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
-  <script src="../js/formProducts.js"></script>
+  <script type="module" src="../js/formProducts.js"></script>
 </body>
 
 </html>
